--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,1 +1,67 @@
-<p>acerca-de works!</p>
+<!-- Acerca de -->
+<section id="Acerca-de" class="container-fluid secciones acercaDe">
+    <div class="row m-0 p-0">
+        <!-- Columna Acerca de -->
+        <div class="col-6 info-el ad">
+            <h2 class="mb-3 d-inline-block titulo-info">Acerca de</h2>
+            <!-- Botón edición Acerca de -->
+            <button class="boton-edit" type="button">
+                <i class="bi bi-pencil-square fs-4  ms-lg-3"></i>
+            </button>
+            <span class="line"></span>
+            <h3>Emiliana Arduzzo</h3>
+            <h4> Full Stack Developer Junior </h4>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam iusto quas ut culpa cum excepturi quae eius reiciendis assumenda voluptatum corrupti, eveniet, officia quam, necessitatibus omnis. Iste ex corrupti iusto! </p>
+        </div>
+
+        <!-- Columna Información personal -->
+        <div class="col-6 info-el">
+            <h2 class="mb-3 d-inline-block titulo-info">Información personal</h2>
+
+            <!-- Botón edición Información personal -->
+            <button class="boton-edit" type="button">
+                <i class="bi bi-pencil-square fs-4 ms-lg-3"></i>
+            </button>
+
+            <span class="line"></span>
+
+            <ul class="list-unstyled">
+                <li class="mb-3">
+                    <span class="list-title">
+                        Cumpleaños:
+                    </span>
+                    <span>
+                        13/11/1987
+                    </span>
+                </li>
+
+                <li class="mb-3">
+                    <span class="list-title">
+                        Email:
+                    </span>
+                    <span>
+                        earduzzo@gmail.com
+                    </span>
+                </li>
+
+                <li class="mb-3">
+                    <span class="list-title">
+                        Celular:
+                    </span>
+                    <span>
+                        3541-54637985896
+                    </span>
+                </li>
+
+                <li>
+                    <span class="list-title">
+                        País de residencia:
+                    </span>
+                    <span>
+                        Argentina
+                    </span>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
