--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -1,1 +1,38 @@
-<p>proyecto works!</p>
+<!--Proyectos-->
+<section id="Proyectos" class="container-fluid secciones">
+    <h2 class="mb-3 d-inline-block">Proyectos</h2>
+    <!-- Botón Agregar Proyecto -->
+    <button class="boton-add" type="button">
+        <i class="bi bi-plus-square fs-3 ms-5"></i>
+    </button>
+    
+
+    <span class="line"></span>
+
+    <div class="row row-cols-1 row-cols-sm-2 g-4 ms-3 me-3">
+        <div class="col d-flex">
+            <div class="card align-self-stretch">
+                <a href="" target="_blank"> <img src="" class="card-img-top" alt="..."> </a>
+                <div class="card-body">
+                    <h3 class="card-title d-inline-block">Portfolio Argentina Programa</h3>
+                    <!-- Botón edición Proyecto-->
+                    <button class="boton-edit" type="button">
+                        <i class="bi bi-pencil-square fs-5"></i>
+                    </button>
+                    <!-- Botón eliminar Proyecto-->
+                    <button class="boton-delete" type="button">
+                        <i class="bi bi-x-square fs-5"></i>
+                    </button>
+                    <h4 class="card-subtitle">
+                        <time> 2022 </time> &nbsp; - &nbsp; <time> 2023 </time>
+                    </h4>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe animi sapiente nulla incidunt, eos rem eum delectus necessitatibus autem! Ipsa sapiente velit voluptas adipisci eaque officia neque tempore in nobis.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
+</section>
