--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,1 +1,46 @@
-<p>educacion works!</p>
+<!-- Educacion -->
+<section id="Educacion" class="container-fluid secciones">
+    <h2 class="mb-3 d-inline-block">Educación</h2>
+    <!-- Botón Agregar Educación -->
+    <button class="boton-add" type="button">
+        <i class="bi bi-plus-square fs-3 ms-5"></i>
+    </button>
+    
+
+    <span class="line"></span>
+
+    <div class="row justify-content-center align-items-center ms-2 me-2">
+    <div class="card col-12 mb-3 p-sm-4 p-1">
+            <div class="row">
+                <div class="col-md-3 d-flex justify-content-center align-items-center">
+                    <img src="" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-9">
+                    <div class="card-body">
+                        <h3 class="card-title d-inline-block mb-3">Instituto Superior Joaquin V Gonzalez</h3>
+                        <!-- Botón edición Experiencia -->
+                    <button class="boton-edit" type="button">
+                        <i class="bi bi-pencil-square fs-5"></i>
+                    </button>
+                    <!-- Botón eliminar Experiencia -->
+                    <button class="boton-delete" type="button">
+                        <i class="bi bi-x-square fs-5"></i>
+                    </button>
+                        
+                        <h4 class="card-subtitle mb-4" >
+                            <time> 2008 </time>&nbsp; - &nbsp; <time> 2010 </time>
+                        </h4>
+                        <h4 class="card-text">
+                            Profesorado de Matematica
+                        </h4>
+                        <p> Profesora de Matematica </p>
+                        <p>8.4</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+        
+    
+</section>
