--- a/src/styles.css
+++ b/src/styles.css
@@ -17,10 +17,6 @@ body {
     padding: 80px 40px;
 }
 
-.container-fluid form {
-    padding: 40px 200px;
-}
-
 h2 {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
@@ -68,6 +64,10 @@ p {
     background-color: transparent;
 }
 
+.boton-edit .bi {
+    color: black;
+}
+
 .boton-delete {
     border: none;
     background-color: transparent;
@@ -75,10 +75,6 @@ p {
 
 .boton-delete .bi {
     color: red;
-}
-
-.boton-edit .bi {
-    color: black;
 }
 
 .navbar.menu .boton-edit {
@@ -117,16 +113,10 @@ form input.form-check-input:checked {
     border-color: #8f68b6 !important;
 }
 
-form .save {
+.offcanvas-body form .save {
     background-color: #7843ad;
     border-color: #7843ad;
     color: white;
-}
-
-form .save:hover {
-    border-color: #8f68b6 !important;
-    color: #8f68b6 !important;
-    background-color: transparent !important;
 }
 
 
@@ -166,9 +156,6 @@ form .save:hover {
         font-size: large !important;
     }
 
-    .boton-delete .bi {
-        font-size: large !important;
-    }
 
     /* Header */
     .navbar.main {
@@ -285,6 +272,10 @@ form .save:hover {
 
     .main-timeline .year {
         width: 15% !important;
+        font-size: 14px !important;
+    }
+
+    .main-timeline .year time {
         font-size: 14px !important;
     }
 
@@ -496,10 +487,11 @@ form .save:hover {
     border-radius: 2px;
     margin: 0;
     padding: 0;
+    position: relative;
 }
 
-.navbar-nav img {
-    width: 220px;
+#foto {
+    width: 240px;
     border-radius: 50%;
     border: 4px solid white;
     padding: 0;
@@ -508,9 +500,12 @@ form .save:hover {
     left: 190px;
     transform: translate(-50%, -50%);
     transition: 1s;
-    z-index: 2 !important;
+    z-index: 3 !important;
 }
 
+.menu {
+    z-index: 2 !important;
+}
 
 .fade {
     opacity: 0;
@@ -524,7 +519,6 @@ li.brand-txt {
 }
 
 /*Acerca de*/
-
 #Acerca-de.secciones {
     padding: 0 !important;
 }
@@ -639,7 +633,7 @@ li.brand-txt {
 
 /*Carcteristicas generales Experiencia*/
 .main-timeline .content-inner {
-    padding: 20px 10px 20px 25%;
+    padding: 10px 10px 10px 25%;
     position: relative;
 }
 
@@ -675,7 +669,7 @@ li.brand-txt {
 }
 
 .main-timeline .year time {
-    font-size: 18px;
+    font-size: 20px;
     word-break: keep-all;
 }
 
@@ -696,7 +690,7 @@ li.brand-txt {
 
 /*Descripcion experiencia*/
 .main-timeline .description {
-    font-size: 20px;
+    font-size: 16px;
     color: #14231c;
     margin: 0;
     text-align: justify;
@@ -714,7 +708,6 @@ li.brand-txt {
 .main-timeline .timeline:nth-child(2n) .timeline-content {
     float: left;
     margin: 0 0 0 20px;
-    padding: 10px;
 }
 
 .main-timeline .timeline:nth-child(2n) .timeline-content:before,
@@ -732,7 +725,7 @@ li.brand-txt {
 }
 
 .main-timeline .timeline:nth-child(2n) .content-inner {
-    padding: 20px 25% 20px 10px;
+    padding: 10px 25% 10px 10px;
 }
 
 .main-timeline .timeline:nth-child(2n) .content-inner:before {
@@ -844,4 +837,13 @@ li.brand-txt {
 #Skills li span {
     color: initial !important;
     font-weight: 200 !important;
+}
+
+
+.divider:after,
+.divider:before {
+    content: "";
+    flex: 1;
+    height: 1px;
+    background: #eee;
 }
