--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -2,16 +2,16 @@
 <section id="Acerca-de" class="container-fluid secciones acercaDe">
     <div class="row m-0 p-0">
         <!-- Columna Acerca de -->
-        <div class="col-6 info-el ad">
+        <div class="col-6 info-el ad" *ngIf="persona">
             <h2 class="mb-3 d-inline-block titulo-info">Acerca de</h2>
             <!-- Botón edición Acerca de -->
             <button class="boton-edit" type="button">
                 <i class="bi bi-pencil-square fs-4  ms-lg-3"></i>
             </button>
             <span class="line"></span>
-            <h3>Emiliana Arduzzo</h3>
-            <h4> Full Stack Developer Junior </h4>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam iusto quas ut culpa cum excepturi quae eius reiciendis assumenda voluptatum corrupti, eveniet, officia quam, necessitatibus omnis. Iste ex corrupti iusto! </p>
+            <h3> {{persona.nombre}} {{persona.apellido}} </h3>
+            <h4> {{persona.ocupacion}} </h4>
+            <p> {{persona.acercade}} </p>
         </div>
 
         <!-- Columna Información personal -->
@@ -25,13 +25,13 @@
 
             <span class="line"></span>
 
-            <ul class="list-unstyled">
+            <ul class="list-unstyled" *ngIf="persona">
                 <li class="mb-3">
                     <span class="list-title">
                         Cumpleaños:
                     </span>
                     <span>
-                        13/11/1987
+                        {{persona.fechanac}}
                     </span>
                 </li>
 
@@ -40,7 +40,7 @@
                         Email:
                     </span>
                     <span>
-                        earduzzo@gmail.com
+                        {{persona.email}}
                     </span>
                 </li>
 
@@ -49,7 +49,7 @@
                         Celular:
                     </span>
                     <span>
-                        3541-54637985896
+                        {{persona.celular}}
                     </span>
                 </li>
 
@@ -58,7 +58,7 @@
                         País de residencia:
                     </span>
                     <span>
-                        Argentina
+                        {{persona.paisresidencia}}
                     </span>
                 </li>
             </ul>
