--- a/src/styles.css
+++ b/src/styles.css
@@ -490,7 +490,8 @@ form input.form-check-input:checked {
     position: relative;
 }
 
-#foto {
+
+img#foto{
     width: 240px;
     border-radius: 50%;
     border: 4px solid white;
